# logi-cli

./: .gitignore  PROTOCOL.md  README.md  agent.py  colors.py  example.toml  logi  logi.py  mappings.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: test.yml
Formula/: logi-cli.rb
completions/: logi.bash  logi.zsh
extracted_protos/: loupedeck.proto  message.proto
extracted_protos/logi/common_protocol/: api.proto  crash_reporting.proto  depot_extensions.proto  installer.proto  manifest.proto  message.proto  settings.proto  updates.proto
extracted_protos/logi/protocol/: accounts.proto  analytics.proto  app_permissions.proto  application.proto  applications.proto  audio.proto  backlight.proto  beta_testing.proto  card_register.proto  cloud.proto  coupled_easy_switch_assist.proto  crown.proto  devices.proto  devices_support.proto  dfu.proto  diagnostic.proto  disable_keys.proto  event_tracing.proto  event_tracing_control.proto  firmware_lighting.proto  flow.proto  force_sensing.proto  haptics.proto  highlights.proto  illumination_light.proto  input_tracker.proto  integrations.proto  keyboard.proto  lighting_support.proto  logging.proto  logioptions.proto  lps.proto  lux_report.proto  macos_security.proto  macros.proto  macros_categories.proto  media.proto  microphone.proto  migration.proto  mouse.proto  (+26 more)
extracted_protos/schema/: radial_menu.proto
tests/: test_colors.py  test_logi.py  test_mappings.py  test_protocol.py
